--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -38,7 +38,7 @@
   --color-secondary-900: var(--color-rose-900);
 
   --color-secondary: var(--color-secondary-500);
-  --color-secondary-foreground: var(--color-secondary-100);
+  --color-secondary-foreground: var(--black);
   --color-secondary-hover: var(--color-secondary-600);
   --color-secondary-active: var(--color-secondary-700);
   --color-secondary-focus: var(--color-secondary-400);
@@ -204,12 +204,12 @@
   --radius-lg: 12px;
 
   /*border*/
-  --border: #000000;
+  --border: currentColor;
 
   /* Shadows */
-  --shadow-sm: 4px 4px 0px 0px var(--border);
-  --shadow-md: 8px 8px 0px 0px var(--border);
-  --shadow-lg: 12px 12px 0px 0px var(--border);
+  --shadow-sm: 4px 4px 0px 0px currentColor;
+  --shadow-md: 8px 8px 0px 0px currentColor;
+  --shadow-lg: 12px 12px 0px 0px currentColor;
 
   --font-size: 16px;
   --font-weight-medium: 700;
