--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -226,7 +226,7 @@
   --text-lg: 1.5rem;
   --text-base: 1rem;
 
-  --background: #fff;
+  --background: #f9f5f2;
   --foreground: oklch(0.145 0 0);
 
   --popover: oklch(1 0 0);
@@ -259,20 +259,19 @@
   /* --------------------------------------------------
      PRIMARY (Yellow-Green)
   -------------------------------------------------- */
-  --primary-50: oklch(0.98 0.08 101);
-  --primary-100: oklch(0.96 0.12 101);
-  --primary-200: oklch(0.94 0.15 101);
-  --primary-300: oklch(0.93 0.17 101);
-  --primary-400: oklch(0.925 0.18 101);
-  --primary-500: oklch(0.92 0.19 101);
-  --primary-600: oklch(0.82 0.18 101);
-  --primary-700: oklch(0.72 0.17 101);
-  --primary-800: oklch(0.62 0.15 101);
-  --primary-900: oklch(0.52 0.13 101);
-  --primary-950: oklch(0.42 0.11 101);
+  --primary-100: oklch(0.98 0.08 90);
+  --primary-200: oklch(0.94 0.05 90);
+  --primary-300: oklch(0.88 0.07 90);
+  --primary-400: oklch(0.87 0.12 90);
+  --primary-500: oklch(0.85 0.15 90);
+  --primary-600: oklch(0.82 0.16 90);
+  --primary-700: oklch(0.78 0.17 90);
+  --primary-800: oklch(0.74 0.18 90);
+  --primary-900: oklch(0.7 0.19 90);
+  --primary-950: oklch(0.66 0.2 90);
 
   --primary: var(--primary-500);
-  --primary-foreground: var(--primary-900);
+  --primary-foreground: var(--primary-950);
 
   /* --------------------------------------------------
      SECONDARY (pinkish)
